--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,11 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+.video-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .video-container video {
   max-width: 100% !important;
   height: auto !important;
